Updates to build scripts - now calls doc update script. manual.dvi removed - since can be built from .tex
git-svn-id: https://svn.mccode.org/svn/McStasTeX@11 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/build
+++ b/trunk/build
@@ -17,8 +17,14 @@ bibtex manual
 # Repeat latex runs:
 latex manual
 latex manual
+# latex the Component_manual
+latex Component_manual
 # Create .ps and .pdf files
 dvips -o mcstas-$1-manual.ps manual.dvi
+dvips -o mcstas-$1-components.ps Component_manual.dvi
 ps2pdf mcstas-$1-manual.ps
+ps2pdf mcstas-$1-components.ps
 # gzip the .ps
 gzip mcstas-$1-manual.ps
+gzip mcstas-$1-components.ps
+
