build: clean up directory after build corrected typos and added a few minor precisions in running and kernel. running: added mcresplot figure comp_removed: added share lib list
git-svn-id: https://svn.mccode.org/svn/McStasTeX@20 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/build
+++ b/trunk/build
@@ -30,3 +30,5 @@ ps2pdf mcstas-$1-components.ps
 gzip mcstas-$1-manual.ps
 gzip mcstas-$1-components.ps
 
+# clear LaTeX temporary files but keep ps, dvi, pdf
+rm -f *.aux *.bbl *.blg *.idx *.ilg *.ind *.log *.toc
