Updated User Manual for release 1.8, and compatible with Component Manual been writen
git-svn-id: https://svn.mccode.org/svn/McStasTeX@45 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/build
+++ b/trunk/build
@@ -19,8 +19,14 @@ makeindex manual
 # Repeat latex runs:
 latex manual
 latex manual
+
 # latex the Component_manual
 latex Component_manual
+bibtex Component_manual
+makeindex Component_manual
+latex Component_manual
+latex Component_manual
+
 # Create .ps and .pdf files
 dvips -o mcstas-$1-manual.ps manual.dvi
 dvips -o mcstas-$1-components.ps Component_manual.dvi
