Various doc updates
git-svn-id: https://svn.mccode.org/svn/McStasTeX@48 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/build
+++ b/trunk/build
@@ -10,6 +10,8 @@
 # Run like e.g. ./build 1.7 - will leave you with
 # mcstas-1.7-manual.ps.gz and mcstas-1.7-manual.pdf
 
+# Create a link to the tutorial pics:
+ln -sf ../mcstas/lib/doc/tutorial/pics .
 # First latex run:
 latex manual
 # Bibtex:
