--- a/trunk/build
+++ b/trunk/build
@@ -35,11 +35,11 @@ dvips -o mcstas-$1-components.ps Component_manual.dvi
 whichdvipdf=`which dvipdf`
 if [ -e "$whichdvipdf" ] ;
 then
-  echo "Generate PDF files using dvipdf (better quality than ps2pdf)"
+  echo "Generate manuals PDF files using dvipdf (better quality than ps2pdf)"
   dvipdf manual.dvi mcstas-$1-manual.pdf
   dvipdf Component_manual.dvi mcstas-$1-components.pdf
 else
-  echo "Generate PDF files using ps2pdf"
+  echo "Generate manuals PDF files using ps2pdf"
   ps2pdf mcstas-$1-manual.ps
   ps2pdf mcstas-$1-components.ps
 fi
