--- a/trunk/build
+++ b/trunk/build
@@ -35,17 +35,19 @@ dvips -o mcstas-$1-components.ps Component_manual.dvi
 whichdvipdf=`which dvipdf`
 if [ -e "$whichdvipdf" ] ;
 then
-  echo "Generate manuals PDF files using dvipdf (better quality than ps2pdf)"
+  echo "Generate User manual PDF file using dvipdf (better quality than ps2pdf)"
   dvipdf manual.dvi mcstas-$1-manual.pdf
+  echo "Generate Component manual PDF file using dvipdf (better quality than ps2pdf)"
   dvipdf Component_manual.dvi mcstas-$1-components.pdf
 else
-  echo "Generate manuals PDF files using ps2pdf"
+  echo "Generate User manual PDF files using ps2pdf"
   ps2pdf mcstas-$1-manual.ps
+  echo "Generate Component manual PDF files using ps2pdf"
   ps2pdf mcstas-$1-components.ps
 fi
-# gzip the .ps
-gzip mcstas-$1-manual.ps
-gzip mcstas-$1-components.ps
+# gzip the .ps. Skipped as we now use PDF only
+#gzip mcstas-$1-manual.ps
+#gzip mcstas-$1-components.ps
 
 # clear LaTeX temporary files but keep ps, dvi, pdf
 rm -f *.aux *.bbl *.blg *.idx *.ilg *.ind *.log *.toc
