--- a/trunk/build
+++ b/trunk/build
@@ -29,9 +29,6 @@ makeindex Component_manual
 latex Component_manual
 latex Component_manual
 
-# Create .ps and .pdf files
-dvips -o mcstas-$1-manual.ps manual.dvi
-dvips -o mcstas-$1-components.ps Component_manual.dvi
 whichdvipdf=`which dvipdf`
 if [ -e "$whichdvipdf" ] ;
 then
@@ -40,14 +37,19 @@ then
   echo "Generate Component manual PDF file using dvipdf (better quality than ps2pdf)"
   dvipdf Component_manual.dvi mcstas-$1-components.pdf
 else
+  echo "Generate manuals PS files using dvips"
+  # Create .ps and .pdf files
+  dvips -o mcstas-$1-manual.ps manual.dvi
+  dvips -o mcstas-$1-components.ps Component_manual.dvi
   echo "Generate User manual PDF files using ps2pdf"
   ps2pdf mcstas-$1-manual.ps
   echo "Generate Component manual PDF files using ps2pdf"
   ps2pdf mcstas-$1-components.ps
+  # gzip the .ps. Skipped as we now use PDF only
+  #gzip mcstas-$1-manual.ps
+  #gzip mcstas-$1-components.ps
+  rm *.ps *.ps.gz
 fi
-# gzip the .ps. Skipped as we now use PDF only
-#gzip mcstas-$1-manual.ps
-#gzip mcstas-$1-components.ps
 
 # clear LaTeX temporary files but keep ps, dvi, pdf
 rm -f *.aux *.bbl *.blg *.idx *.ilg *.ind *.log *.toc
