now builds doc from McStasTex. Will have to be adapted to McXtrace when its manual comes ;-)
git-svn-id: https://svn.mccode.org/svn/McStasTeX@251 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/build
+++ b/trunk/build
@@ -11,7 +11,7 @@
 # mcstas-1.7-manual.ps.gz and mcstas-1.7-manual.pdf
 
 # Create a link to the tutorial pics:
-ln -sf ../mcstas/lib/doc/tutorial/pics .
+ln -sf ../../McCode/trunk/doc/tutorial/pics .
 # First latex run:
 latex manual
 # Bibtex:
